adjust error messages

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,24 +1,24 @@
 # Add book data from
-empty.bookDataFormData.title=Title is mandatory
-empty.bookDataFormData.yearOfPublication=Year is mandatory
-empty.bookDataFormData.edition=Edition is mandatory
-empty.bookDataFormData.author=Author is mandatory
-empty.bookDataFormData.isbn=ISBN is mandatory
-notvalid.bookDataFormData.edition=Edition is not valid
-notvalid.bookDataFormData.isbn=ISBN is not valid
-notvalid.bookDataFormData.yearOfPublication=Year is not valid
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+empty.bookDataFormData.title=Bitte geben Sie einen Titel ein
+empty.bookDataFormData.yearOfPublication=Bitte geben Sie ein Jahr ein
+empty.bookDataFormData.edition=Bitte geben Sie eine Edition ein
+empty.bookDataFormData.author=Bitte geben Sie einen Author ein
+empty.bookDataFormData.isbn=Bitte geben Sie eine ISBN-Nummer ein
+notvalid.bookDataFormData.edition=Bitte geben Sie eine Zahl für die Edition ein
+notvalid.bookDataFormData.isbn=Bitte geben Sie eine gültige ISBN-Nummer ein
+notvalid.bookDataFormData.yearOfPublication=Bitte geben Sie nur numerische Werte ein
+invalid.length.bookDataFormData.yearOfPublication=Bitte geben Sie eine vierstellige Jahreszahl ein
 
 # Borrow book form
-notvalid.borrowCmd.isbn=ISBN is not valid
-empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowCmd.email=Email is not valid
-empty.borrowCmd.email=Email is mandatory
+notvalid.borrowCmd.isbn=Bitte geben Sie eine gültige ISBN-Nummer ein
+empty.borrowCmd.isbn=Bitte geben Sie eine ISBN-Nummer ein
+notvalid.borrowCmd.email=Bitte geben Sie eine gültige E-Mail-Adresse ein (z.B.: max@mustermann.de)
+empty.borrowCmd.email=Bitte geben Sie eine E-Mail-Adresse ein
 
 # Return all books form
-empty.returnAllBookFormData.emailAddress=Email is mandatory
-notvalid.returnAllBookFormData.emailAddress=Email is not valid
+empty.returnAllBookFormData.emailAddress=Bitte geben Sie eine E-Mail-Adresse ein
+notvalid.returnAllBookFormData.emailAddress=Bitte geben Sie eine gültige E-Mail-Adresse ein (z.B.: max@mustermann.de)
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
-de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
+de.codecentric.psd.worblehat.web.validation.ISBN=Bitte geben Sie eine ISBN-Nummer ein
+de.codecentric.psd.worblehat.web.validation.Numeric=Bitte geben Sie nur numerische Werte ein
