Translates properties to english

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,24 +1,24 @@
 # Add book data from
-empty.bookDataFormData.title=Bitte geben Sie einen Titel ein
-empty.bookDataFormData.yearOfPublication=Bitte geben Sie ein Jahr ein
-empty.bookDataFormData.edition=Bitte geben Sie eine Edition ein
-empty.bookDataFormData.author=Bitte geben Sie einen Author ein
-empty.bookDataFormData.isbn=Bitte geben Sie eine ISBN-Nummer ein
-notvalid.bookDataFormData.edition=Bitte geben Sie eine Zahl für die Edition ein
-notvalid.bookDataFormData.isbn=Bitte geben Sie eine gültige ISBN-Nummer ein
-notvalid.bookDataFormData.yearOfPublication=Bitte geben Sie nur numerische Werte ein
-invalid.length.bookDataFormData.yearOfPublication=Bitte geben Sie eine vierstellige Jahreszahl ein
+empty.bookDataFormData.title=Please enter a title
+empty.bookDataFormData.yearOfPublication=Please enter a year
+empty.bookDataFormData.edition=Please add an edition
+empty.bookDataFormData.author=Please add an author
+empty.bookDataFormData.isbn=Please add an ISBN-Number (10 chars)
+notvalid.bookDataFormData.edition=Please add a number
+notvalid.bookDataFormData.isbn=Please add a valid ISBN number
+notvalid.bookDataFormData.yearOfPublication=Please add a valid year
+invalid.length.bookDataFormData.yearOfPublication=Please add a valid year
 
 # Borrow book form
-notvalid.borrowCmd.isbn=Bitte geben Sie eine gültige ISBN-Nummer ein
-empty.borrowCmd.isbn=Bitte geben Sie eine ISBN-Nummer ein
-notvalid.borrowCmd.email=Bitte geben Sie eine gültige E-Mail-Adresse ein (z.B.: max@mustermann.de)
-empty.borrowCmd.email=Bitte geben Sie eine E-Mail-Adresse ein
+notvalid.borrowCmd.isbn=Please enter a valid ISBN number
+empty.borrowCmd.isbn=Please enter an ISBN number
+notvalid.borrowCmd.email=Please enter a valid email address (z.B.: max@mustermann.de)
+empty.borrowCmd.email=Please enter an email address
 
 # Return all books form
-empty.returnAllBookFormData.emailAddress=Bitte geben Sie eine E-Mail-Adresse ein
-notvalid.returnAllBookFormData.emailAddress=Bitte geben Sie eine gültige E-Mail-Adresse ein (z.B.: max@mustermann.de)
+empty.returnAllBookFormData.emailAddress=Please enter an email 
+notvalid.returnAllBookFormData.emailAddress=Please enter a valid email
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=Bitte geben Sie eine ISBN-Nummer ein
+de.codecentric.psd.worblehat.web.validation.ISBN=The ISBN is not valid
 de.codecentric.psd.worblehat.web.validation.Numeric=Bitte geben Sie nur numerische Werte ein
