Changes after PO review

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -1,24 +1,24 @@
 # Add book data from
 empty.bookDataFormData.title=Please enter a title
 empty.bookDataFormData.yearOfPublication=Please enter a year
-empty.bookDataFormData.edition=Please add an edition
-empty.bookDataFormData.author=Please add an author
-empty.bookDataFormData.isbn=Please add an ISBN-Number (10 chars)
-notvalid.bookDataFormData.edition=Please add a number
-notvalid.bookDataFormData.isbn=Please add a valid ISBN number
-notvalid.bookDataFormData.yearOfPublication=Please add a valid year
-invalid.length.bookDataFormData.yearOfPublication=Please add a valid year
+empty.bookDataFormData.edition=Please enter an edition 
+empty.bookDataFormData.author=Please enter an author
+empty.bookDataFormData.isbn=Please enter an ISBN-Number (10 chars)
+notvalid.bookDataFormData.edition=Please enter a number 
+notvalid.bookDataFormData.isbn=Please enter a valid ISBN number (10 chars)
+notvalid.bookDataFormData.yearOfPublication=Please enter a valid year
+invalid.length.bookDataFormData.yearOfPublication=Please enter a valid year
 
 # Borrow book form
-notvalid.borrowCmd.isbn=Please enter a valid ISBN number
-empty.borrowCmd.isbn=Please enter an ISBN number
+notvalid.borrowCmd.isbn=Please enter a valid ISBN number (10 chars)
+empty.borrowCmd.isbn=Please enter an ISBN number (10 chars)
 notvalid.borrowCmd.email=Please enter a valid email address (z.B.: max@mustermann.de)
 empty.borrowCmd.email=Please enter an email address
 
 # Return all books form
 empty.returnAllBookFormData.emailAddress=Please enter an email 
-notvalid.returnAllBookFormData.emailAddress=Please enter a valid email
+notvalid.returnAllBookFormData.emailAddress=Please enter a valid email (z.B.: max@mustermann.de)
 
 # Default messages for custom validators
 de.codecentric.psd.worblehat.web.validation.ISBN=The ISBN is not valid
-de.codecentric.psd.worblehat.web.validation.Numeric=Bitte geben Sie nur numerische Werte ein
+de.codecentric.psd.worblehat.web.validation.Numeric=Please enter only numeric messages
