Adds spring info

--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.liquibase.change-log=classpath:master.xml
 spring.liquibase.drop-first=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.thymeleaf.cache=false
+
+info.app.version=@pom.version@
