--- a/worblehat-web/src/main/resources/application.properties
+++ b/worblehat-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring WebApp Config
-server.context-path=/worblehat
+server.servlet.context-path=/worblehat
 
 # Database Config
 spring.datasource.url=jdbc:mysql://localhost:3306/worblehat_test
@@ -13,12 +13,11 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Hint: Read about resource filtering with Spring Boot and Maven:
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-properties-and-configuration.html
 spring.application.name=@pom.name@
-info.version=@pom.version@
+info.app.version=@pom.version@
 info.stage=test
 logging.file=/tmp/@pom.artifactId@.log
 spring.liquibase.change-log=classpath:master.xml
 spring.liquibase.drop-first=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.thymeleaf.cache=false
-
-info.app.version=@pom.version@
+management.endpoint.info.enabled=true
