--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
+                <version>5.2.17.Final</version>
             </dependency>
             <dependency>
                 <groupId>commons-validator</groupId>
