--- a/worblehat-acceptancetests/pom.xml
+++ b/worblehat-acceptancetests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.codecentric.psd</groupId>
         <artifactId>worblehat</artifactId>
-        <version>1.3.1</version>
+        <version>1.4</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -117,6 +117,8 @@
                     <downloadedZipFileDirectory>target/zips</downloadedZipFileDirectory>
                     <!-- Location of a custom repository map -->
                     <customRepositoryMap>${project.basedir}/repo.xml</customRepositoryMap>
+                    <!-- To specify an explicit proxy set the environment variables http.proxyHost and http.proxyPort -->
+                    <useSystemProxy>true</useSystemProxy>
                 </configuration>
                 <executions>
                     <execution>
